--- a/Academy.Week7.Esercitazione.WCF/App.config
+++ b/Academy.Week7.Esercitazione.WCF/App.config
@@ -11,15 +11,15 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="Academy.Week7.Esercitazione.WCF.Service1">
+      <service name="Academy.Week7.Esercitazione.WCF.ClientService">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/Academy.Week7.Esercitazione.WCF/Service1/" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/Academy.Week7.Esercitazione.WCF/ClientService/" />
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
         <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address="" binding="basicHttpBinding" contract="Academy.Week7.Esercitazione.WCF.IService1">
+        <endpoint address="" binding="basicHttpBinding" contract="Academy.Week7.Esercitazione.WCF.IClientService">
           <!-- 
               Upon deployment, the following identity element should be removed or replaced to reflect the 
               identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
